--- a/app/main.html
+++ b/app/main.html
@@ -3,37 +3,49 @@
 
 <HEAD>
     <TITLE>Weather HTML</TITLE>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <META CHARSET="UTF-8">
+        <style>
+        </style>
 </HEAD>
 
-<BODY style="background-color:darkgray">
-    <H1>今日の天気・お出かけ情報</H1>
-
+<BODY style="background-color:rgb(255, 255, 255)">
+    <H1 style="  color: #364e96;/*文字色*/padding: 0.5em 0;/*上下の余白*/border-top: solid 3px #364e96;/*上線*/border-bottom: solid 3px #364e96;/*下線*/">今日の天気・お出かけ情報</H1>
     <div style="margin-left: 30px">
         <div style="display: flex;">
             <div name="weather_today" style="margin-right: 30px;">
-                <h2>今日の天気</h2>
-                <div style="background-color:antiquewhite; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5); width: 300px">
-                    <div style="font-size: 50px">晴れ</div>
+                <h2 style="padding: 0.25em 0.5em;/*上下 左右の余白*/ color: #494949;/*文字色*/  background: transparent;/*背景透明に*/border-left: solid 5px #7db4e6;/*左線*/">今日の天気</h2>
+                <div style="background-color:rgb(250, 215, 215); box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5); width: 300px; border-radius: 10px;padding: 20px;">
+                    <div style="font-size: 50px;font-weight:bold;">晴れ☀</div>
                     <div style="font-size: 30px">気温：20℃</div>
                     <div style="font-size: 30px">湿度：20%</div>
-                    乾燥に注意しましょう
+                    乾燥に注意しましょう☀☀
                 </div>
             </div>
 
-            <div name="weather_tommorow">
-                <h2>明日の天気</h2>
-                <div style="background-color:aquamarine; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5); width: 300px">
-                    <div style="font-size: 50px">曇り</div>
+            <div name="weather_tommorow"  style="margin-right: 30px;">
+                <h2 style="padding: 0.25em 0.5em;/*上下 左右の余白*/ color: #494949;/*文字色*/  background: transparent;/*背景透明に*/border-left: solid 5px #7db4e6;/*左線*/">明日の天気</h2>
+                <div style="background-color:rgb(214, 214, 214); box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5); width: 300px; border-radius: 10px;padding: 20px;">
+                    <div style="font-size: 50px;font-weight:bold;">曇り⛅</div>
                     <div style="font-size: 30px">気温：15℃</div>
                     <div style="font-size: 30px">湿度：25%</div>
                     花粉に注意。
                 </div>
             </div>
+
+            <div name="weather_tommorow2">
+                <h2 style="padding: 0.25em 0.5em;/*上下 左右の余白*/ color: #494949;/*文字色*/  background: transparent;/*背景透明に*/border-left: solid 5px #7db4e6;/*左線*/">明後日の天気</h2>
+                <div style="background-color:rgb(127, 180, 255); box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5); width: 300px; border-radius: 10px;padding: 20px;">
+                    <div style="font-size: 50px">雨☔</div>
+                    <div style="font-size: 30px">気温：10℃</div>
+                    <div style="font-size: 30px">湿度：80%</div>
+                    湿気に注意
+                </div>
+            </div>
         </div>
 
         <div name="weather_week">
-            <h2>今週の天気</h2>
+            <h2 style="padding: 0.25em 0.5em;/*上下 左右の余白*/ color: #494949;/*文字色*/  background: transparent;/*背景透明に*/border-left: solid 5px #7db4e6;/*左線*/">今週の天気</h2>
             <table style="background-color:floralwhite; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);">
                 <thead>
                     <tr>
@@ -53,7 +65,7 @@
                     <tr>
                         <td style="border: 1px solid #000; width: 80px">晴れ</td>
                         <td style="border: 1px solid #000; width: 80px">曇り</td>
-                        <td style="border: 1px solid #000; width: 80px">曇り/雨</td>
+                        <td style="border: 1px solid #000; width: 80px">雨</td>
                         <td style="border: 1px solid #000; width: 80px">雨</td>
                         <td style="border: 1px solid #000; width: 80px">晴れ</td>
                         <td style="border: 1px solid #000; width: 80px; color:blue">快晴</td>
@@ -64,5 +76,4 @@
         </div>
     </div>
 </BODY>
-
 </HTML>
